<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="@dimen/titleTxt"
        android:layout_margin="10dp"
        android:id="@+id/welcome"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/soccerAth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome"
        android:layout_marginStart="@dimen/margins"
        android:layout_marginTop="@dimen/margins"
        android:layout_marginEnd="@dimen/margins"
        android:layout_marginBottom="@dimen/margins"
        android:hint="@string/soccerAthleteName"
        android:textSize="@dimen/regTxt"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/soccerAth"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margins"
        android:layout_marginStart="@dimen/margins"
        android:layout_marginTop="@dimen/margins"
        android:layout_marginEnd="@dimen/margins"
        android:layout_marginBottom="@dimen/margins"
        android:text="@string/saveSoccer"
        android:id="@+id/soccerBtn"
        android:textSize="@dimen/btnTxt"
        />
    <EditText
        android:id="@+id/basketballAth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/soccerBtn"
        android:layout_margin="@dimen/margins"
        android:layout_marginStart="@dimen/margins"
        android:layout_marginTop="@dimen/margins"
        android:layout_marginEnd="@dimen/margins"
        android:layout_marginBottom="@dimen/margins"
        android:hint="@string/basketballAthleteName"
        android:textSize="@dimen/regTxt"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/basketballAth"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margins"
        android:layout_marginStart="@dimen/margins"
        android:layout_marginTop="@dimen/margins"
        android:layout_marginEnd="@dimen/margins"
        android:layout_marginBottom="@dimen/margins"
        android:text="@string/saveBasketball"
        android:id="@+id/basketballBtn"
        android:textSize="@dimen/btnTxt"/>
    <EditText
        android:id="@+id/tennisAth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/basketballBtn"
        android:layout_margin="@dimen/margins"
        android:layout_marginStart="@dimen/margins"
        android:layout_marginTop="@dimen/margins"
        android:layout_marginEnd="@dimen/margins"
        android:layout_marginBottom="@dimen/margins"
        android:hint="@string/tennisAthleteName"
        android:textSize="@dimen/regTxt"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tennisAth"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margins"
        android:layout_marginStart="@dimen/margins"
        android:layout_marginTop="@dimen/margins"
        android:layout_marginEnd="@dimen/margins"
        android:layout_marginBottom="@dimen/margins"
        android:text="@string/saveTennis"
        android:id="@+id/tennisBtn"
        android:textSize="@dimen/btnTxt"/>

</RelativeLayout>