<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:src="@drawable/circle"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margins"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt"
        android:layout_margin="@dimen/margins"
        android:layout_below="@id/logo"
        android:text="@string/name"
        android:textSize="@dimen/regTxt"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/yourName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt"
        android:layout_marginStart="@dimen/margins"
        android:layout_marginTop="@dimen/margins"
        android:layout_marginEnd="@dimen/margins"
        android:layout_marginBottom="@dimen/margins"
        android:hint="@string/yourName"
        android:textSize="@dimen/regTxt" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/yourName"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margins"
        android:layout_marginStart="@dimen/margins"
        android:layout_marginTop="@dimen/margins"
        android:layout_marginEnd="@dimen/margins"
        android:layout_marginBottom="@dimen/margins"
        android:text="@string/goToSaveName"
        android:onClick="proceedToAthleteName"
        android:textSize="@dimen/btnTxt"/>

</RelativeLayout>